fixed color but wrong alignment

--- a/static/style/master.css
+++ b/static/style/master.css
@@ -49,7 +49,7 @@
     --input-border-color: #ccc;
     --input-border-color-action: #0073D7;
     --input-shadow-color-focus: #0073D755;
-    --input-border-color-invaild: #c00;
+    --input-border-color-invalid: #c00;
     --input-border-color-action-invalid: #f00;
     --input-shadow-color-focus-invalid: #c005;
 
@@ -69,8 +69,8 @@
 
     --messages-bcolor: #ddd;
     --messages-fcolor: #111;
-    --messages-success-fcolor: #0a0;
-    --messages-error-fcolor: #b00;
+    --messages-success-bcolor: #a5ff71;
+    --messages-error-bcolor: #ff5c5c;
 }
 
 /*
@@ -246,7 +246,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 }
 
 input[type="text"]:invalid, input[type="email"]:invalid, input[type="password"]:invalid {
-    border: 1px solid var(--input-border-color-invaild);
+    border: 1px solid var(--input-border-color-invalid);
 }
 
 input[type="text"]:focus:invalid, input[type="email"]:focus:invalid, input[type="password"]:focus:invalid,
@@ -332,38 +332,6 @@ ul.errorlist > li {
     margin: 0;
     border: 0;
     padding: .25rem 0;
-}
-
-/* styling of messages */
-
-ul.messages {
-    display: block;
-
-    margin: 1rem 0 2rem 0;
-    border: 0;
-    padding: .25rem 1rem;
-
-    background-color: var(--messages-bcolor);
-    color: var(--messages-fcolor);
-    list-style-type: none;
-}
-
-ul.messages > li {
-    display: block;
-    
-    margin: 0;
-    border: 0;
-    padding: .25rem 0;
-
-    font-weight: 600;
-}
-
-ul.messages > li.success {
-    color: var(--messages-success-fcolor);
-}
-
-ul.messages > li.error {
-    color: var(--messages-error-fcolor);
 }
 
 
@@ -516,23 +484,32 @@ footer#mainfooter a:focus, footer#mainfooter > a:hover {
 -------------------------------------------------------------------------------------------------
 */
 /* navigation bar */
+
 div#navi-bar{
     background-color: var(--header-bcolor);                
-    padding: 4px 0;                     
+    padding: 4px 0px;                     
     margin: 0;                        
 }
-div#navi-bar a {
+div#navi-bar a, a:visited {
     color:var(--header-fcolor); 
     word-spacing: 1em;                  
     text-decoration: none;        
-    padding: 4px 8px;              
+    padding: 4px 8px;
+    margin-right: 20px;              
 }
- div#navi-bar a:link, a:visited {
+
+div#navi-bar a:hover, a:focus {
+    color: var(--header-fcolor);
+    text-decoration: none;
+}
+
+div#test a, a:visited {
     color: var(--header-fcolor);
     text-decoration: none;
     font-weight: 500;
 }
-div#navi-bar a:hover, a:focus {
+
+div#test a:hover, a:focus {
     color: var(--header-fcolor);
     text-decoration: none;
 }
@@ -592,3 +569,42 @@ a#nav-user-toggle.logged-in::after {
     border-top-color: #E37222;
 }
 
+/*
+-------------------------------------------------------------------------------------------------
+    messages implementation
+-------------------------------------------------------------------------------------------------
+*/
+
+ul.messages {
+    display: block;
+
+    position: relative;
+    /* move to the very top of the body wrapper */
+    top: -2rem;
+
+    margin: 0 0 1rem 0;
+    border: 0;
+    padding: 0;
+
+    background-color: var(--messages-bcolor);
+    color: var(--messages-fcolor);
+    list-style-type: none;
+}
+
+ul.messages > li {
+    display: block;
+    
+    margin: 0;
+    border: 0;
+    padding: .5rem 1rem;
+
+    font-weight: 600;
+}
+
+ul.messages > li.success {
+    background-color: var(--messages-success-bcolor);
+}
+
+ul.messages > li.error {
+    background-color: var(--messages-error-bcolor);
+}
